$Id: History,v 1.88 2000-06-09 08:42:46 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

9th June 2000  John Allison  (vis-V01-01-06)
- Tagged for system testing.

8th June 2000  Guy Barrand
- OPACS/src/G4GoSceneHandler.cc : correct polyhedron 
  wire-frame in order to remove some edges. Now the
  rendering is the same than for OpenGL driver.
   This was requested for long by ALICE, and had been
  requested for ATLAS by Gaston Parrour recently.

7th June 2000  John Allison
- /vis/viewer/update preferred, synonym /vis/viewer/show deprecated.

7th June 2000  Makoto Asai
- Fix the flip view of RayTracer.

2nd June May 2000  John Allison
- Forced /control/verbose 2 for compound commands.

20th May 2000  John Allison
- Bug fix in G4PhysicalVolumeModel for replicas (Guy Barrand).

26 May 2000  Guy Barrand
- management/src/G4VisCommandsScene.
  Protect against a null pointer for aScene in NotifyHandlers::SetNewValue.