@@ -1,4 +1,4 @@
-$Id: History,v 1.88 2000-06-09 08:42:46 johna Exp $
+$Id: History,v 1.89 2000-07-03 10:36:31 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -23,6 +23,9 @@ committal in the CVS repository !
 
 History file for visualization category
 ---------------------------------------
+
+3rd July 2000  John Allison
+- Explicitly initialised all data members of G4ViewParameters in constructor.
 
 9th June 2000  John Allison  (vis-V01-01-06)
 - Tagged for system testing.
